# buska

./: Cargo.toml  Dockerfile  DockerfileNoCache  docker-compose.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: extract_from_cmd.rs  main.rs  output.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  partition.rs  utils.rs
core/src/search/: bounds.rs  headers.rs  json.rs  mod.rs  notifications.rs  payload.rs
core/src/search/extractors/: header.rs  json.rs  key.rs  mod.rs  payload.rs
core/src/search/matchers/: mod.rs
web/: Cargo.toml
web/assets/: index.html
web/front/: dev.sh
web/front/src/: Commands.elm  Home.elm  Model.elm
web/front/src/Ports/: JSSearch.elm
web/front/src/Views/: SearchForm.elm  SearchProgress.elm  SearchResults.elm
web/src/: main.rs
