[workspace]
members = [ "./core", "./cli" ]

[workspace.package]
#name = "buska"
version = "0.1.0"
edition = "2021"
authors = ["aesteve <arnaud.esteve@gmail.com>"]
description = "A set of utilities to look for data in Apache Kafka topics"
keywords = ["kafka", "apache kafka", "search"]
repository = "https://github.com/aesteve/buska"

[workspace.dependencies]
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
rdkafka = { version = "0.29", features = ["ssl", "cmake-build" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.3", features = ["macros", "rt", "time", "sync" ] }



