[package]
name = "buska-cli"
version = "0.0.1"
edition = "2021"
authors = ["aesteve <arnaud.esteve@gmail.com>"]
description = "A CLI to look for data in Kafka topics"
keywords = ["kafka", "apache kafka", "search", "cli"]

[dependencies]
buska-core = { path = "../core" }
clap = { version = "3.0.14", features = ["derive"] }
config = "0.13"
env_logger = "0.9"
indicatif = "0.17.0-beta.1"

# common dependencies for whole project
chrono = "0.4"
rdkafka = { version =  "0.28" , features = ["ssl", "cmake-build" ] }
serde_json = "1.0"
tokio = { version = "1.3", features = ["macros", "rt", "time", "sync", "rt-multi-thread"] }
futures = "0.3"