[package]
name = "buska-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A CLI to look for data in Kafka topics"
keywords = ["kafka", "apache kafka", "search", "cli"]

[dependencies]
buska-core = { path = "../core" }
chrono.workspace = true
config = "0.13"
clap = { version = "3.0.14", features = ["derive"] }
env_logger.workspace = true
futures.workspace = true
rdkafka.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread" ] }
indicatif = "0.17"

# common dependencies for whole project
