[package]
name = "buska-core"
version = "0.0.1"
authors = ["aesteve <arnaud.esteve@decathlon.com>"]
edition = "2021"
description = "A library providing utilities to look for data in Kafka topics"
keywords = ["kafka", "apache kafka", "search", "lib"]

[dependencies]
rdkafka = { version =  "0.27" , features = ["ssl", "cmake-build" ] }
serde = { version = "1.0.124", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.3.0", features = ["macros", "rt", "time", "sync"] }
log = "0.4"
env_logger = "0.9"
jsonpath-rust = "0.1.3"
serde_json = "1.0"
futures = "0.3"

# README: "dependency management" (i.e. defining common dependency versions at root level)
[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"