[package]
name = "buska-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords = ["kafka", "apache kafka", "search", "lib"]

[dependencies]
chrono.workspace = true
env_logger.workspace = true
futures.workspace = true
jsonpath-rust = "0.1"
log.workspace = true
rdkafka.workspace = true
regex = "1.5"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# README: "dependency management" (i.e. defining common dependency versions at root level)
[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"